--- a/bmi.html
+++ b/bmi.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BMI_Calculator</title>
+
+     <link rel="stylesheet" href="bmi.css" />
 </head>
 <body>
     <div class="container">
@@ -21,5 +23,6 @@
         </div>
       </form>
     </div>
+    <script src="script.js"></script>
 </body>
 </html>
